Fix Reddit integration compile errors for Java 17